<resources>
    <string name="ga_id">UA-56775181-1</string>
    <string name="app_name">Mobstar</string>
    <string name="fb_app_id">252687194923254</string>
    <string name="every_one_has">EVERYONE\nHAS TALENT</string>
    <string name="what_is_yours">WHAT\'S YOURS?</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="display_name">DISPLAY NAME</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="back">BACK</string>
    <string name="finish">FINISH</string>
    <string name="login">LOGIN</string>
    <string name="reset">RESET</string>
    <string name="temp_uname">lukeymo</string>
    <string name="temp_name">Luke Mowatt</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="messages">MESSAGES</string>
    <string name="entries">ENTRIES FEED</string>
    <string name="stars">STARS</string>
    <string name="mentors">MENTORS</string>
    <string name="winners">WINNERS</string>
    <string name="goodies">GOODIES</string>
    <string name="blog">BLOG</string>
    <string name="help">HELP</string>
    <string name="settings">SETTINGS</string>
    <string name="search">SEARCH</string>
    <string name="all_entries">ALL ENTRIES</string>
    <string name="latest">LATEST</string>
    <string name="temp_time">3 days ago</string>
    <string name="temp_description">This is first entry</string>
    <string name="temp_comments">15</string>
    <string name="deny">DENY</string>
    <string name="allow">ALLOW</string>
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="share_this">SHARE THIS...</string>
    <string name="reason_for_report">REASON FOR REPORTING...</string>
    <string name="entry_information">ENTRY INFORMATION</string>
    <string name="category">CATEGORY</string>
    <string name="music">MUSIC</string>
    <string name="language">LANGUAGE</string>
    <string name="english">ENGLISH</string>
    <string name="tags">TAGS</string>
    <string name="_127">127</string>
    <string name="overall_position">OVERALL\nPOSITION</string>
    <string name="positive">POSITIVE</string>
    <string name="select_category">SELECT A\nCATEGORY</string>
    <string name="select_sub_category">SELECT A\nSUB CATEGORY</string>
    <string name="select_media_type">SELECT A\nMEDIA TYPE</string>
    <string name="approve_photo">APPROVE PHOTO?</string>
    <string name="approve_audio">APPROVE AUDIO?</string>
    <string name="approve_video">APPROVE VIDEO?</string>
    <string name="approve">APPROVE</string>
    <string name="retake">RETAKE</string>
    <string name="get_ready">GET READY!</string>
    <string name="upload_image">UPLOAD\nAN IMAGE</string>
    <string name="title">TITLE</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_tags">Enter Tags</string>
    <string name="comments">Comments</string>
    <string name="comments_cap">COMMENTS</string>
    <string name="temp_comment">Haha, really like this!</string>
    <string name="say_something">SAY SOMETHING</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="temp_notification_text">mattf has commented on your entry "entrytitle"</string>
    <string name="my_entries">MY ENTRIES</string>
    <string name="delete_entry_question">DELETE ENTRY?</string>
    <string name="meet_the_mentors">MEET THE MENTORS</string>
    <string name="bono">Bono</string>
    <string name="bono_description">Bono is the frontman of the Irish rock brand U2.He\'s also known for participating in global charity efforts.</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="my_stars">MY STARS</string>
    <string name="my_feedback">MY FEEDBACK</string>
    <string name="all_winners">ALL WINNERS</string>
    <string name="date">DATE</string>
    <string name="music_winner">Music Winner</string>
    <string name="faqs">FAQS</string>
    <string name="faq_string">This is frequently ask question that is currently open?</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="linked_accounts">LINKED ACCOUNTS</string>
    <string name="facebook">FACEBOOK</string>
    <string name="temp_fb_email">lukeymo@hotmail.com</string>
    <string name="twitter">TWITTER</string>
    <string name="temp_twitter_name">\@lukeymo</string>
    <string name="google">GOOGLE+</string>
    <string name="temp_google_name">lukeymo@gmail.com</string>
    <string name="pinterest">PINTEREST</string>
    <string name="connect_your_account">CONNECT YOUR ACCOUNT</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="app_settings">APP SETTINGS</string>
    <string name="push_notifications">PUSH NOTIFICATIONS</string>
    <string name="off">OFF</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="privacy_policy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Y</string>
    <string name="report_abuse">REPORT ABUSE</string>
    <string name="send_report">SEND\nREPORT</string>
    <string name="report_abuse_text">WE TAKE ANY ABUSE OF THIS APP VERY\nSERIOUSLY.  TO REPORT ABUSE OF ANY\nKIND, PLEASE USE THE FORM PROVIDED\nBELOW &amp; BE AS DETAILED AS POSSIBLE</string>
    <string name="type_your_message_here">TYPE YOUR MESSAGE HERE</string>
    <string name="leave_feedback">LEAVE FEEDBACK</string>
    <string name="send_feedback">SEND\nFEEDBACK</string>
    <string name="leave_feedback_text">HOW DO YOU LIKE THE MOBSTAR APP?WE APPRECIATE ALL FEEDBACK, GOODOR BAD, AS IT WILL HELP US IMPROVE.PLEASE LEAVE YOUR FEEDBACK BELOW</string>
    <string name="somebody_stop_me">\"Somebody stop me\"</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="start_over">START\nOVER</string>
    <string name="finish_tour">FINISH\nTOUR</string>
    <string name="take_tour">TAKE\nTOUR</string>
    <string name="enter_mobstar">ENTER MOBSTAR</string>
    <string name="don_t_show_this_again">DON\'T SHOW THIS AGAIN</string>
    <string name="agree_privacy_policy">I AGREE TO THE MOBSTAR\nTERMS OF THE SERVICE &amp; PRIVACY POLICY</string>
    <string name="menu_delete">delete</string>
    <string name="profile_pic">PROFILE\nPIC</string>
    <string name="cover_image">COVER\nIMAGE</string>
    <string name="user_tagline">TAGLINE\n&amp; BIO</string>
    <string name="add_content">ADD\nCONTENT</string>
    <string name="edit_tagline">EDIT TAGLINE</string>
    <string name="edit_bio">EDIT BIO</string>
    <string name="pick_account">Pick Account</string>
    <string name="unrecoverable_error">Unrecoverable Play Services error</string>
    <string name="logout">LOGOUT</string>
    <string name="talent_connect">TALENT CONNECT</string>
    <string name="following">FOLLOWING</string>
    <string name="i_am_fan">I AM A FAN</string>
    <string name="inbox">INBOX</string>
    <string name="points">POINTS</string>
    <string name="fan_connect">FAN CONNECT</string>
    <string name="followers_connect">FOLLOWERS CONNECT</string>
    <string name="mobstar_points">MOBSTAR POINTS</string>
    <string name="available">AVAILABLE</string>
    <string name="use_points">USE POINTS</string>
    <string name="fans">FANS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="feedback">FEEDBACK</string>
    <string name="votes">MY VOTES</string>
    <string name="position">POSITION</string>
    <string name="sort_by">SORT BY:</string>
    <string name="name">NAME</string>
    <string name="message_fans">MESSAGE FOLLOWRS...</string>
    <string name="all">ALL</string>
    <string name="this_contest">THIS CONTEST</string>
    <string name="top_talents">TOP TALENTS</string>
    <string name="be_the_first_to_comment">BE THE FIRST\nTO COMMENT</string>
    <string name="you_have_no_notifications">YOU HAVE NO\nNOTIFICATIONS</string>
    <string name="you_have_no_fans_yet">YOU HAVE\nNO FOLLOWERS YET</string>
    <string name="nobody_has_voted_yet">NO BODY HAS\nVOTED YET</string>
    <string name="there_are_no_talents_yet">THERE ARE\nNO TALENTS\nYET</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="talent_pool">TALENT POOL</string>
    <string name="you_havent_added_any_comment_yet">YOU HAVEN\'T\nADDED ANY\nCOMMENT YET</string>
    <string name="you_havent_added_any_talent_yet">YOU HAVEN\'T\nADDED ANY\nTALENT YET</string>
    <string name="you_have_no_feedback">YOU HAVE\nNO FEEDBACK</string>
    <string name="verify_mobileno">VERIFY MOBILE NUMBER</string>
    <string name="country">COUNTRY</string>
    <string name="mobile_no">MOBILE NUMBER</string>
    <string name="hint_enter_mobileno">ENTER MOBILE NUMBER</string>
    <string name="enter_mobileno">ENTER MOBILE NUMBER</string>
    <string name="send_code">SEND CODE</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="hint_dash">-</string>
    <string name="posted">POSTED:</string>
    <string name="views">VIEWS:</string>
    <string name="who_to_follow">WHO TO FOLLOW</string>
    <string name="skip">SKIP</string>
    <string name="follow">FOLLOW</string>
    <string name="mobit">MOBITS</string>
    <string name="liked_mobit">Liked MOBIT</string>
    <string name="bio">BIO</string>
    <string name="update">UPDATES</string>
    <string name="profile">PROFILE</string>
    <string name="ok">OK</string>
    <string name="likes">Likes</string>
    <string name="you_have_no_likes_yet">YOU HAVE\nNO LIKES YET</string>
    <string name="rank">Rank</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="curve">CURVE</string>
    <string name="fashion">(FASHION)</string>
    <string name="movie_clip">MOVIE CLIP</string>
    <string name="age">AGE</string>
    <string name="height">HEIGHT</string>
    <string name="select_age">Select Age</string>
    <string name="select_height">Select Height</string>
    <string name="gender">GENDER</string>
    <string name="i_want_to">I WANT TO:</string>
    <string name="new_profile_content">NEW PROFILE CONTENT</string>
	<string name="new_msg">NEW MESSAGE</string>
    <string name="yes_votes">YES VOTES</string>
    <string name="no_votes">NO VOTES</string>
    <string name="capture_now">CAPTURE NOW</string>
    <string name="upload_from_phone">UPLOAD FROM PHONE</string>
    <string name="upload_to_profile">UPLOAD TO PROFILE</string>
    <string name="send_to_friend"><b>SEND</b> TO A FRIEND</string>
    <string name="post_to_facebook">POST TO <b>FACEBOOK</b></string>
    <string name="add_to_google">ADD TO <b>GOOGLE+</b></string>
    <string name="tweet_about_this"><b>TWEET</b> ABOUT THIS</string>
    <string name="edit_information">EDIT INFORMATION</string>
    <string name="delete_entry">DELETE ENTRY</string>
</resources>