<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_transparent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <com.mobstar.custom.CustomTextviewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/new_profile_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white_color"
            android:textSize="18sp" />

        <com.mobstar.custom.CustomTextviewBold
            android:id="@+id/btnCaptureNow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_big_btn_height"
            android:layout_marginTop="@dimen/scale_20"
            android:contentDescription="@string/app_name"
            style="@style/BaseButton.Yellow"
            android:drawableLeft="@drawable/icn_btn_enter_mabstar"
            android:text="@string/capture_now"/>

        <com.mobstar.custom.CustomTextviewBold
            android:id="@+id/btnUploadPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_big_btn_height"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:text="@string/upload_from_phone"
            android:drawableLeft="@drawable/icn_btn_upload_from_phone"
            style="@style/BaseButton.Yellow"/>
    </LinearLayout>
    
    <com.mobstar.custom.CustomTextviewBold
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_big_btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        style="@style/BaseButton.Gray"
        android:drawableLeft="@drawable/icn_btn_back"
        android:text="@string/back"/>

</RelativeLayout>