<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_transparent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".upload.ApprovePhotoActivity" >

    <com.mobstar.custom.CustomTextviewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/approve_photo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white_color"
        android:textSize="18sp"
         />

    <ImageView
        android:id="@+id/imageFrame"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnRetake"
            android:layout_width="@dimen/signup_btn_width"
            android:layout_height="@dimen/signup_btn_height"
            android:background="@drawable/gray_btn"
            android:text="@string/retake"
            android:textColor="@android:color/white"
            android:textSize="@dimen/signup_btn_text" />

        <Button
            android:id="@+id/btnApprove"
            android:layout_width="@dimen/signup_btn_width"
            android:layout_height="@dimen/signup_btn_height"
            android:layout_marginLeft="20dp"
            android:background="@drawable/yellow_btn"
            android:text="@string/approve"
            android:textColor="@android:color/white"
            android:textSize="@dimen/signup_btn_text" />
    </LinearLayout>

</LinearLayout>