<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_transparent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".help.ReportAbuseActivity" >

    <com.mobstar.custom.CustomTextviewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/report_abuse"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white_color"
        android:textSize="22sp"
         />

    <com.mobstar.custom.CustomTextview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="4dp"
        android:singleLine="false"
        android:text="@string/report_abuse_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white_color"
        android:textSize="16sp"
         />

    <EditText
        android:id="@+id/editReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/type_your_message_here"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:padding="@dimen/signup_edittext_padding"
        android:textSize="@dimen/signup_edittext" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/signup_btn_width"
            android:layout_height="@dimen/signup_btn_height"
            android:background="@drawable/gray_btn"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/signup_btn_text" />

        <Button
            android:id="@+id/btnSendReport"
            android:layout_width="@dimen/signup_btn_width"
            android:layout_height="@dimen/signup_btn_height"
            android:layout_marginLeft="20dp"
            android:background="@drawable/yellow_btn"
            android:text="@string/send_report"
            android:textColor="@android:color/white"
            android:textSize="@dimen/signup_btn_text" />
    </LinearLayout>

</LinearLayout>