<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_logo" />

        <com.mobstar.custom.CustomTextview
            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/every_one_has"
            android:textColor="@android:color/white"
            android:textSize="@dimen/splash_text" />

        <com.mobstar.custom.CustomTextviewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_yours"
            android:textColor="@android:color/white"
            android:textSize="@dimen/splash_text" />
    </LinearLayout>

</FrameLayout>